[tool.poetry]
name = "astrolero"
version = "0.1.0"
description = "Yet another 2D space shooter"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"
readme = "README.rst"

repository = "https://github.com/pkulev/astrolero"
homepage = "https://github.com/pkulev/astrolero"

keywords = ["pygame", "space", "shooter", "game"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Software Development :: Libraries :: pygame",
]

[tool.poetry.scripts]
astrolero = "astrolero.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
eaf = "^0.2"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.0"
pytest-cov = "^2.8.1"
pytest-pylint = "^0.15.1"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
